--- a/WebsiteStyles.css
+++ b/WebsiteStyles.css
@@ -1,11 +1,20 @@
 body {
 	margin: auto;
-    width: 70%;
-    padding: 10px;
-	background: white;
-	background-position: top;
+    width: 90%;
+    padding-top: 10px;
+	background-image: url(background-img.jpg);
+	background-position: bottom;
 	background-repeat: no-repeat;
+	display: block;
 	background-attachment: fixed;
+	background-size: cover;
+}
+div.transbox {
+    margin: 30px;
+    background-color: #ffffff;
+	border: 1px solid black;
+    opacity: 0.7;
+    filter: alpha(opacity=60); /* For IE8 and earlier */
 }
 img.displayed {
     width:50%;
@@ -17,20 +26,26 @@ img.displayed {
 p {
 	font-family: Arial;
 	color: black;
+	padding-left: 10px;
+	padding-right; 10px;
+	padding-bottom; 10px;
 }
 ul {
     list-style-type: none;
-    margin: 0;
+    margin: auto;
 	padding-top: 30px;
 	padding-left: 0;
 	padding-right: 0;
 	font-family: Arial;
+	font-weight: Bold;
 	text-align: center;
 } 
 ul.a {
 	list-style-type: circle;
 	text-align: left;
+	padding-left: 30px;
 }
 table, th, td {
     border: 1px solid black;
+	table-layout: fixed;
 }
