--- a/WebsiteStyles.css
+++ b/WebsiteStyles.css
@@ -14,7 +14,7 @@ div.transbox {
     background-color: #ffffff;
 	border: 1px solid black;
     opacity: 0.7;
-    filter: alpha(opacity=60); /* For IE8 and earlier */
+    filter: alpha(opacity=60);
 }
 img.displayed {
     width:50%;
